# passc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  build.zig  build.zig.zon  main.c
.github/workflows/: cmake-single-platform.yml  mdbook.yml
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  todos.html  usage.html
docs/src/: README.md  SUMMARY.md  security_features.md  todos.md  usage.md
src/: main.zig
src/lib/: db.zig  files.zig  password.zig  root.zig  statement.zig  vault.zig
